--- a/twig/layout.twig
+++ b/twig/layout.twig
@@ -8,6 +8,8 @@
 </head>
 <body>
 <div class="container">
+    <h1><a href="/">BeerXML Checker</a></h1>
+    <hr>
     {% block body %}
 
     {% endblock %}
